[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gameplay/GameStates/WaveState/Wave.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="Wave" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemyFollower" type="Path2D" parent="."]
position = Vector2( -6.72705, -0.00012207 )
curve = SubResource( 1 )

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
